--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "express": "^4.16.4"
   },
   "engines":{
-    "node": 12.14.0 ,
-    "npm": 6.13.4
+    "node": "12.14.0",
+    "npm": "6.13.4"
   }
 }
